Incluidos publicações e cursos

--- a/index_courses.html
+++ b/index_courses.html
@@ -134,124 +134,102 @@
   </div>
 </div>
 
-<!-- EXPERIENCE -->
-<div class="section" id="experience">
+<!-- COURSES -->
+<div class="section" id="courses">
   <div class="container cc-experience">
-    <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="h4 text-center mb-4 title">Technical Courses</div>
+
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1999 - Present</p>
-            <div class="h6">IT Manager</div>
-            <div class="h6">R&D Project Leader</div>
+            <div class="h5">Management <br>&amp; Innovation</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">IMPA - Institute of Pure and Applied Mathematics</div>
-            <p>Head of Computer Department and Project Leader in technical-scientific multi institutional projects.</p>
+            <div class="h6">LGPD ( <i>Brazilian General Data Protection Law</i> )</div>
+            <div class="h6">ITIL 4</div>
+            <div class="h6">SEO</div>
+            <div class="h6">Google Analytics</div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1994 - 2016</p>
-            <div class="h6">R&D Project Leader</div>
+            <div class="h5">DevOps</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Tecgraf Institute / PUC-Rio</div>
-            <p>Associate Researcher at Tecgraf Institute/PUC-Rio of Technical-Scientific Software Development.
+            <div class="h6">Ansible</div>
+            <div class="h6">Docker</div>
+            <div class="h6">DevOps</div>
+            <div class="h6">Kubernetes</div>
+            <div class="h6">Terraform</div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1984 - 1999</p>
-            <div class="h6">IT Manager</div>
-            <div class="h6">R&D Project Leader</div>
+            <div class="h5">Data Science</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">LNCC - National Laboratory for Scientific Computing</div>
-            <p>Head of Computer Department and Project Leader in technical-scientific multi institutional projects.</p>
+            <div class="h6">Data Science</div>
+            <div class="h6">Machine Learning</div>
+            <div class="h6">Advanced Machine Learning</div>
+            <div class="h6">Machine Learning for Digital Business</div>
+            <div class="h6">Deep Learning with PyTorch</div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1994 - 1998</p>
-            <div class="h6">Assistant Professor</div>
+            <div class="h5">Cloud</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Centro Universitário da Cidade</div>
-            <p>Computer Science subjects in the graduate course.</p>
+            <div class="h6">Amazon Web Services</div>
+            <div class="h6">Google Certified Associate Cloud Engineer</div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1991 - 1993</p>
-            <div class="h6">Visitor Professor</div>
+            <div class="h5">Programming<br>Languages</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">IME - Military Institute of Engineering</div>
-            <p>Computer Science subjects in master's degree course.</p>
+            <div class="h6">Python</div>
+            <div class="h6">Python for Data Science</div>
+            <div class="h6">Statistics with Python</div>
+            <div class="h6">Django</div>
+            <div class="h6">Django REST APIs</div>
           </div>
         </div>
       </div>
     </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>1989 - 1991</p>
-            <div class="h6">Professor</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">Smart Informática</div>
-            <p>Computer Science subjects in the graduate course.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-experience-header">
-            <p>1982 - 1983</p>
-            <div class="h6">Intern</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">CBPF - Brazilian Center for Research in Physics</div>
-            <p>Electronic Engineering intern.</p>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 </div>
 
@@ -259,54 +237,6 @@
 <div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
-
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>Last years</p>
-            <div class="h5">Technical Courses</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-		<div class="container">
-		  <div class="row">
-		    <div class="col-sm">
-			    <p class="category" style="text-align: left;">Data Science</p>
-					<p> Data Science<br>
-						Machine Learning<br>
-						Advanced Machine Learning<br>
-						Machine Learning in Digital Business<br>
-						Deep Learning with PyTorch
-					</p>
-			    <p class="category" style="text-align: left;">DevOps</p>
-					<p> Docker<br>
-						DevOps<br>
-						Kubernetes
-					</p>
-		    </div>
-		    <div class="col-sm">
-			    <p class="category" style="text-align: left;">Programming Languages</p>
-					<p> Python<br>
-						Python for Statistics<br>
-						Python for Data Science<br>
-						Django<br>
-						Lua 
-					</p>
-			    <p class="category" style="text-align: left;">Management &amp; Innovation</p>
-					<p> SEO<br>
-						ITIL 4<br>
-						LGPD (Brazilian GDPR)
-					</p>
-		    </div>
-		  </div>
-		</div>
-
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="card">
       <div class="row">
