--- a/index_v1.html
+++ b/index_v1.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta name="google-site-verification" content="8zYwcX2Ya1pHhKy0ouZxqlby4MaWkQO-3yOgXEP9XYI" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Innovative and solutions-focused IT Manager with more than 20 years in enterprise project management, specialized in leading multi-disciplinary teams">
-    <meta name="description" content="R&D Project Leader with more than 25 years leading software development in academic research areas">
-    <meta name="description" content="Roberto de Beauclair Seixas">
-    <meta name="description" content="Roberto Beauclair">
-    <meta name="description" content="R.B.Seixas">
-    <meta name="description" content="IT Manager">
-    <meta name="description" content="Innovative and solutions-focused IT Manager">
-    <meta name="description" content="R&D Project Leader">
-    <title>Roberto Beauclair - IT Manager</title>
+    <title>Roberto Beauclair's Home Page</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-<!--
-    <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" rel="stylesheet">
--->
-    <link href="css/aos.min.css?ver=1.1.0" rel="stylesheet">
+    <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
     <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/main.min.css?ver=1.1.0" rel="stylesheet">
+    <link href="css/main.css?ver=1.1.0" rel="stylesheet">
     <noscript>
       <style type="text/css">
         [data-aos] {
@@ -37,19 +25,15 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
           <div class="container">
             <div class="navbar-translate">
-				<!-- 
-				<img src="images/impa-logo.webp">
-				--> 
-				<img src="images/70anos-logo.webp"> 
+				<img src="images/impa-logo.png">
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html#about">About</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="index.html#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="index_courses.html#courses">Courses</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="index_papers.html#papers">Publications</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -61,10 +45,10 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/lagoa_50.webp')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/lagoa.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/rbeauclair.webp" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/rbeauclair.png" alt="Image"/></a></div>
           <div class="h2 title">Roberto de Beauclair Seixas</div>
           <p class="category text-white">IT Manager (CIO, ITSM, CSIRT) and R&D Project Leader</p>
 		<!--
@@ -78,8 +62,6 @@
           <div class="button-container">
 		<a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/robertobeauclair" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin-square"></i></a>
 		<!--
-		<a class="btn btn-default btn-round btn-lg btn-icon" href="http://lattes.cnpq.br/4918487638490690" rel="tooltip" title="Resume on Lattes"><i class="ai ai-lattes-square ai-2x"></i></a>
-		<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-lattes"></i></a>
 		<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
 		<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
 		<a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a>
@@ -149,8 +131,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">IMPA - Institute of Pure and Applied Mathematics</div>
-            <p>Head of Computer Department and Project Leader in technical-scientific multi institutional projects.</p>
+            <div class="h5">IMPA - Institute of Pure and Applied Mathematcis</div>
+            <p>Head of Computer Departament and Project Leader in technical-scientific multi institutional projects.</p>
           </div>
         </div>
       </div>
@@ -166,7 +148,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Tecgraf Institute / PUC-Rio</div>
-            <p>Associate Researcher at Tecgraf Institute/PUC-Rio of Technical-Scientific Software Development.
+            <p>Associate Researcher at Tecgraf Institute/PUC-Rio of Technical-Scientific Software Development of PUC-Rio, in the area of Training Games and Evaluation.</p> 
           </div>
         </div>
       </div>
@@ -183,7 +165,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">LNCC - National Laboratory for Scientific Computing</div>
-            <p>Head of Computer Department and Project Leader in technical-scientific multi institutional projects.</p>
+            <p>Head of Computer Departament and Project Leader in technical-scientific multi institutional projects.</p>
           </div>
         </div>
       </div>
@@ -281,9 +263,8 @@
 						Deep Learning with PyTorch
 					</p>
 			    <p class="category" style="text-align: left;">DevOps</p>
-					<p> Docker<br>
-						DevOps<br>
-						Kubernetes
+					<p> DevOps<br>
+						DevOps and Kubernetes
 					</p>
 		    </div>
 		    <div class="col-sm">
@@ -291,12 +272,10 @@
 					<p> Python<br>
 						Python for Statistics<br>
 						Python for Data Science<br>
-						Django<br>
-						Lua 
+						Django
 					</p>
-			    <p class="category" style="text-align: left;">Management &amp; Innovation</p>
-					<p> SEO<br>
-						ITIL 4<br>
+			    <p class="category" style="text-align: left;">Management</p>
+					<p> ITIL 4<br>
 						LGPD (Brazilian GDPR)
 					</p>
 		    </div>
@@ -321,7 +300,7 @@
             <div class="h5">PUC-Rio - Pontifical Catholic University of Rio de Janeiro</div>
             <p class="category" style="text-align: left;">Computer Science</p>
             <p>Advisor: <a href="https://web.tecgraf.puc-rio.br/~mgattass/">Marcelo Gattass</a><br>
-               Keywords: Scientific Visualization, Volume Visualization, High Performance Computing</p>
+               <b>Keywords:</b> Scientific Visualization, High Performance Computing, Volume Visualization</p>
           </div>
         </div>
       </div>
@@ -339,7 +318,7 @@
             <div class="h5">IME - Military Institute of Engineering</div>
             <p class="category" style="text-align: left;">Computer Science</p>
             <p>Advisors: Lilia de Assunção Hess and Roberto Lins de Carvalho<br>
-               Keywords: Computer Graphics, Artificial Inteligence</p>
+               <b>Keywords:</b> Computer Graphics, Artificial Inteligence</p>
           </div>
         </div>
       </div>
@@ -356,7 +335,7 @@
           <div class="card-body">
             <div class="h5">ATM Training Company</div>
             <p class="category" style="text-align: left;">System Support Specialist</p>
-               Keywords: Operational Systems, Programming Languages, System Support</p>
+               <b>Keywords:</b> Operational Systems, Programming Languages, System Support</p>
           </div>
         </div>
       </div>
@@ -373,7 +352,7 @@
           <div class="card-body">
             <div class="h5">SMART Informática</div>
             <p class="category" style="text-align: left;">System Analyst</p>
-               Keywords: Database, Programming Languages, Systems Analyst</p>
+               <b>Keywords:</b> Database, Programming Languages, Systems Analyst</p>
           </div>
         </div>
       </div>
@@ -390,7 +369,7 @@
           <div class="card-body">
             <div class="h5">USU - Santa Úrsula University</div>
             <p class="category" style="text-align: left;">Electrical Engineering</p>
-            <p>Keywords: Electrical Engineering, Electronics, Microsystems, Digital Systems</p>
+            <p><b>Keywords:</b> Electrical Engineering, Electronics, Microsystems, Digital Systems</p>
           </div>
         </div>
       </div>
@@ -398,7 +377,76 @@
   </div>
 </div>
 
-
+<!-- CONTACT -->
+<div class="section" id="contact">
+  <div class="cc-contact-information" style="background-image: url('images/static_map_rj_2.png')">
+    <div class="container">
+      <div class="cc-contact">
+        <div class="row">
+          <div class="col-md-9">
+            <div class="card mb-0" data-aos="zoom-in">
+              <div class="h4 text-center title">Contact Me</div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <form action="https://formspree.io/rbs@impa.br" method="POST">
+                      <div class="p pb-3"><strong>Feel free to contact me </strong></div>
+                      <div class="row mb-3">
+                        <div class="col">
+                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-user-circle"></i></span>
+                            <input class="form-control" type="text" name="name" placeholder="Name" required="required"/>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col">
+                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-file-text"></i></span>
+                            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required"/>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col">
+                          <div class="input-group"><span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                            <input class="form-control" type="email" name="_replyto" placeholder="E-mail" required="required"/>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row mb-3">
+                        <div class="col">
+                          <div class="form-group">
+                            <textarea class="form-control" name="message" placeholder="Your Message" required="required"></textarea>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <button class="btn btn-primary" type="submit">Send</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <p class="mb-0"><strong>Address </strong></p>
+                    <p class="pb-2">Estrada Dona Castorina, 110</p>
+                    <p class="pb-2">Rio de Janeiro, RJ, Brazil</p>
+                    <p class="mb-0"><strong>Phone</strong></p>
+                    <p class="pb-2">+55 (21) 2529-5281</p>
+                    <p class="mb-0"><strong>Email</strong></p>
+                    <p>rbs @ impa.br</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div></div>
+    </div>
     <footer class="footer">
       <div class="container text-center">
 	<a class="cc-facebook btn btn-link" href="https://www.linkedin.com/in/robertobeauclair"><i class="fa fa-linkedin fa-2x " aria-hidden="true"></i></a>
