Atualização com as publicações

--- a/index_courses-v1.html
+++ b/index_courses-v1.html
@@ -148,9 +148,10 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h6">LGPD ( <i>Brazilian General Data Protection Law</i> ) - 2 courses - 20h</div>
-            <div class="h6">ITIL 4 - 5 courses - 50h</div>
-            <div class="h6">SEO - 3 courses - 30h</div>
+            <div class="h6">LGPD ( <i>Brazilian General Data Protection Law</i> )</div>
+            <div class="h6">ITIL 4</div>
+            <div class="h6">SEO</div>
+            <div class="h6">Google Analytics</div>
           </div>
         </div>
       </div>
@@ -165,9 +166,11 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h6">Docker - 4 courses - 50h</div>
-            <div class="h6">DevOps - 12 courses - 120h</div>
-            <div class="h6">Kubernetes - 4 courses - 40h</div>
+            <div class="h6">Ansible</div>
+            <div class="h6">Docker</div>
+            <div class="h6">DevOps</div>
+            <div class="h6">Kubernetes</div>
+            <div class="h6">Terraform</div>
           </div>
         </div>
       </div>
@@ -182,13 +185,11 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h6">Data Science - 8 courses - 80h</div>
-            <div class="h6">Advanced Data Science - 13 courses - 120h</div>
-            <div class="h6">Machine Learning - 8 courses - 80h</div>
-            <div class="h6">Machine Learning with Statistics - 9 courses - 70h</div>
-            <div class="h6">Advanced Machine Learning - 11 courses - 100h</div>
-            <div class="h6">Machine Learning for Digital Business - 8 courses - 90h</div>
-            <div class="h6">Deep Learning with PyTorch - 4 couses - 40h</div>
+            <div class="h6">Data Science</div>
+            <div class="h6">Machine Learning</div>
+            <div class="h6">Advanced Machine Learning</div>
+            <div class="h6">Machine Learning for Digital Business</div>
+            <div class="h6">Deep Learning with PyTorch</div>
           </div>
         </div>
       </div>
@@ -203,8 +204,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h6">Amazon Web Services - 9 courses - 80h</div>
-            <div class="h6">Google Certified Associate Cloud Engineer - 5 courses - 50h</div>
+            <div class="h6">Amazon Web Services</div>
+            <div class="h6">Google Certified Associate Cloud Engineer</div>
           </div>
         </div>
       </div>
@@ -220,10 +221,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h6">Python</div>
-            <div class="h6">Python for Data Science - 9 courses - 90h</div>
-            <div class="h6">Statistics with Python - 8 courses - 80h</div>
-            <div class="h6">Django - 7 courses - 70h</div>
-            <div class="h6">Django REST APIs - 5 courses - 40h</div>
+            <div class="h6">Python for Data Science</div>
+            <div class="h6">Statistics with Python</div>
+            <div class="h6">Django</div>
+            <div class="h6">Django REST APIs</div>
           </div>
         </div>
       </div>
