--- a/index.html
+++ b/index.html
@@ -281,9 +281,10 @@
 						Deep Learning with PyTorch
 					</p>
 			    <p class="category" style="text-align: left;">DevOps</p>
-					<p> Docker<br>
-						DevOps<br>
-						Kubernetes
+					<p> 
+						Docker<br>
+						Virtual Machines<br>
+						Terraform
 					</p>
 		    </div>
 		    <div class="col-sm">
@@ -291,13 +292,14 @@
 					<p> Python<br>
 						Python for Statistics<br>
 						Python for Data Science<br>
-						Django<br>
+						Flask / Streamlit<br>
 						Lua 
 					</p>
-			    <p class="category" style="text-align: left;">Management &amp; Innovation</p>
-					<p> SEO<br>
-						ITIL 4<br>
-						LGPD (Brazilian GDPR)
+			    <p class="category" style="text-align: left;">Cloud Computing</p>
+					<p> 
+						Google Cloud<br>
+						Oracle Cloud<br>
+						Amazon Web Services
 					</p>
 		    </div>
 		  </div>
