--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+55 (21) 2529-5281<br>
-									+55 (21) 2529-5263</div>
+              <div class="col-sm-8">+55 (21) 2529-5281</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Professional Address:</strong></div>
@@ -150,7 +149,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">IMPA - Institute of Pure and Applied Mathematics</div>
-            <p>Head of Computer Department and Project Leader in technical-scientific multi institutional projects.</p>
+            <p>Head Information Technology (IT) department and Project Leader in technical-scientific multi institutional projects.</p>
           </div>
         </div>
       </div>
