--- a/index_courses.html
+++ b/index_courses.html
@@ -219,6 +219,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
+            <div class="h6">Lua</div>
             <div class="h6">Python</div>
             <div class="h6">Python for Data Science - 9 courses - 90h</div>
             <div class="h6">Statistics with Python - 8 courses - 80h</div>
