--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/rbeauclair.webp" alt="Image"/></a></div>
           <div class="h2 title">Roberto de Beauclair Seixas</div>
-          <p class="category text-white">IT Manager (CIO, ITSM, CSIRT) and R&D Project Leader</p>
+          <p class="category text-white">CTO and R&D Project Leader</p>
 		<!--
 		<a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
 		<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
@@ -111,7 +111,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">rbs @ impa.br</div>
+              <div class="col-sm-8">rbs @ cepel.br</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
@@ -119,9 +119,9 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Professional Address:</strong></div>
-              <div class="col-sm-8">Estrada Dona Castorina, 110<br>
+              <div class="col-sm-8">Avenida Horácio Macedo, 354 – Cidade Universitária, Ilha do Fundão<br>
 									Rio de Janeiro, RJ, Brazil<br>
-									22460-320</div>
+									21941-911</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Lattes ID:</strong></div>
@@ -142,7 +142,24 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>1999 - Present</p>
+            <p>2025 - Present</p>
+            <div class="h6">CTO</div>
+            <div class="h6">R&D Project Leader</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">CEPEL - Electrical Energy Research Center</div>
+            <p>CTO and Project Leader in technical-scientific multi institutional projects.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>1999 - 2025</p>
             <div class="h6">IT Manager</div>
             <div class="h6">R&D Project Leader</div>
           </div>
