--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Roberto de Beauclair Seixas">
     <meta name="description" content="Roberto Beauclair">
     <meta name="description" content="R.B.Seixas">
-    <meta name="description" content="IT Manager">
+    <meta name="description" content="CTO">
     <meta name="description" content="Innovative and solutions-focused IT Manager">
     <meta name="description" content="R&D Project Leader">
     <title>Roberto Beauclair - IT Manager</title>
