--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="CTO">
     <meta name="description" content="Innovative and solutions-focused IT Manager">
     <meta name="description" content="R&D Project Leader">
-    <title>Roberto Beauclair - IT Manager</title>
+    <title>Roberto Beauclair - CTO</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 <!--
@@ -65,7 +65,12 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/lagoa_50.webp')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/rbeauclair.webp" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#">
+		  <img src="images/foto_cepel.png" alt="Image"/></a>
+		  <!--
+		  <img src="images/rbeauclair.webp" alt="Image"/></a>
+		  -->
+	  </div>
           <div class="h2 title">Roberto de Beauclair Seixas</div>
           <p class="category text-white">CTO and R&D Project Leader</p>
 		<!--
