Update CEPEL info

--- a/index_courses.html
+++ b/index_courses.html
@@ -10,10 +10,10 @@
     <meta name="description" content="Roberto de Beauclair Seixas">
     <meta name="description" content="Roberto Beauclair">
     <meta name="description" content="R.B.Seixas">
-    <meta name="description" content="IT Manager">
+    <meta name="description" content="CTO">
     <meta name="description" content="Innovative and solutions-focused IT Manager">
     <meta name="description" content="R&D Project Leader">
-    <title>Roberto Beauclair - IT Manager</title>
+    <title>Roberto Beauclair - CTO</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
 <!--
@@ -40,7 +40,7 @@
 				<!-- 
 				<img src="images/impa-logo.webp">
 				--> 
-				<img src="images/70anos-logo.webp"> 
+				<img src="images/cepel-logo-removebg-preview.png"> 
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -64,9 +64,9 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/lagoa_50.webp')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/rbeauclair.webp" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/foto_cepel.png" alt="Image"/></a></div>
           <div class="h2 title">Roberto de Beauclair Seixas</div>
-          <p class="category text-white">IT Manager (CIO, ITSM, CSIRT) and R&D Project Leader</p>
+          <p class="category text-white">CTO and R&D Project Leader</p>
 		<!--
 		<a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
 		<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
